--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "---",
   "default": "index.html",
-  "source": "src/index.html",
+  "source": "src/index.hbs",
   "scripts": {
-    "start": "parcel -p 3000",
+    "start": "parcel src/index.hbs -p 3000 --no-cache",
     "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,5 +25,10 @@
     "parcel": "2.2.1"
   },
   "browserslist": "last 2 versions",
-  "engines" : { "node" : ">=12.0.0" } 
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "dependencies": {
+    
+  }
 }
