--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "---",
   "default": "index.html",
-  "source": "src/index.hbs",
+  "source": "",
   "scripts": {
-    "start": "parcel src/index.hbs -p 3000 --no-cache",
-    "build": "parcel build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/pages/**/*.pug",
+    "build": "parcel build src/pages/**/*.pug",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +21,17 @@
   },
   "homepage": "https://github.com/san4ezz87/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@andreyvolokitin/parcel-transformer-handlebars": "^0.0.3",
+    "@parcel/transformer-pug": "^2.2.1",
     "@parcel/transformer-sass": "^2.2.1",
-    "parcel": "2.2.1"
+    "parcel": "2.2.1",
+    "parcel-bundler": "^1.4.1"
   },
   "browserslist": "last 2 versions",
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
-    
+    "express": "^4.17.2"
   }
 }
