--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "source": "",
   "scripts": {
     "start": "parcel src/pages/**/*.pug",
-    "build": "parcel build src/pages/**/*.pug",
+    "build": "parcel build --no-minify src/pages/**/*.pug",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js"
   },
