--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@andreyvolokitin/parcel-transformer-handlebars": "^0.0.3",
     "@parcel/transformer-pug": "^2.2.1",
     "@parcel/transformer-sass": "^2.2.1",
+    "cssnano": "^4.1.11",
     "parcel": "2.2.1"
   },
   "browserslist": "last 2 versions",
