--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "default": "dist",
   "source": "src",
   "scripts": {
-    "start": "parcel -p 3000 src/pages/**/*.pug",
-    "build": "parcel build 'src/pages/**/*.pug'",
+    "start": "parcel -p 3000 src/pages/index.html",
+    "build": "parcel build 'src/pages/index.html'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js"
   },
@@ -21,11 +21,11 @@
   },
   "homepage": "https://github.com/san4ezz87/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@andreyvolokitin/parcel-transformer-handlebars": "^0.0.3",
     "@parcel/transformer-pug": "^2.2.1",
     "@parcel/transformer-sass": "^2.2.1",
     "cssnano": "^4.1.11",
-    "parcel": "2.2.1"
+    "parcel": "2.2.1",
+    "parcel-transformer-pug-precompile": "^1.0.6"
   },
   "browserslist": "last 2 versions",
   "engines": {
