--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "nanoid": "^3.3.1"
   }
 }
